added users panel

--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,18 +1,12 @@
-.login {
-  width: 100%;
-  position: relative;
-  background: none;
-}
-
 .login form {
   width: 320px;
-  position: absolute;
-  right: 10px;
-  top: 15px;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 15px;
 }
 
 @media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
   .login form {
-    top: 160px;
+    margin-top: 20px;
   }
 }
