--- a/src/app/companies/company-create/company-create.component.html
+++ b/src/app/companies/company-create/company-create.component.html
@@ -4,7 +4,7 @@
   <form #companyForm="ngForm">
     <div class="companyData">
       <h4>Company</h4>
-      <input type="text" [ngModel]="company?.name" name="name" #name="ngModel" placeholder="{{companyLabels.name}}" required>
+      <input type="text" autofocus [ngModel]="company?.name" name="name" #name="ngModel" placeholder="{{companyLabels.name}}" required>
       <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
         {{ companyMessages.noName }}
       </div>
@@ -15,41 +15,49 @@
       </div>
       <app-cc-select (onSelectedItems)="setSelectedRegions($event)" [items]="regions" [selectedItems]="selectedRegions" [label]="companyLabels.regions"></app-cc-select>
     </div>
-    <div class="pollRatingContainer">
-      <h4>{{companyLabels.pollRating}}</h4>
-      <div class="pollRating">
-        <div class="labelOnTop">
-          <label>{{companyLabels.great}}</label>
-          <input type="number" min="0" [ngModel]="company?.pollRating.greatPercentage" name="greatPercentage" #greatPercentage="ngModel" placeholder="{{companyLabels.great}}"
-            required>
-          <div [hidden]="greatPercentage.valid || greatPercentage.pristine" class="alert alert-danger">
-            {{ companyMessages.noPollRating }}
+    <div class="container">
+      <div class="flex1">
+        <h4>{{companyLabels.pollRating}}</h4>
+        <div class="pollRating">
+          <div class="labelOnTop">
+            <label>{{companyLabels.great}}</label>
+            <input type="number" min="0" [ngModel]="company?.pollRating.great" name="great" #great="ngModel" placeholder="{{companyLabels.great}}"
+              required>
+            <div [hidden]="great.valid || great.pristine" class="alert alert-danger">
+              {{ companyMessages.noPollRating }}
+            </div>
+          </div>
+          <div class="labelOnTop">
+            <label>{{companyLabels.ok}}</label>
+            <input type="number" min="0" [ngModel]="company?.pollRating.ok" name="ok" #ok="ngModel" placeholder="{{companyLabels.ok}}"
+              required>
+            <div [hidden]="ok.valid || ok.pristine" class="alert alert-danger">
+              {{ companyMessages.noPollRating }}
+            </div>
+          </div>
+          <div class="labelOnTop">
+            <label>{{companyLabels.poor}}</label>
+            <input type="number" min="0" [ngModel]="company?.pollRating.poor" name="poor" #poor="ngModel" placeholder="{{companyLabels.poor}}"
+              required>
+            <div [hidden]="poor.valid || poor.pristine" class="alert alert-danger">
+              {{ companyMessages.noPollRating }}
+            </div>
+          </div>
+          <div class="labelOnTop">
+            <label>{{companyLabels.total}}</label>
+            <input type="number" min="0" [ngModel]="company?.pollRating.totalVotes" name="totalVotes" #totalVotes="ngModel" placeholder="{{companyLabels.total}}"
+              required>
+            <div [hidden]="totalVotes.valid || totalVotes.pristine" class="alert alert-danger">
+              {{ companyMessages.noPollRating }}
+            </div>
+            <div [hidden]="great.value + ok.value + poor.value <= totalVotes.value" class="alert alert-danger">
+                {{ companyMessages.totalVotesError }}
+              </div>
           </div>
         </div>
-        <div class="labelOnTop">
-          <label>{{companyLabels.ok}}</label>
-          <input type="number" min="0" [ngModel]="company?.pollRating.okPercentage" name="okPercentage" #okPercentage="ngModel" placeholder="{{companyLabels.ok}}"
-            required>
-          <div [hidden]="okPercentage.valid || okPercentage.pristine" class="alert alert-danger">
-            {{ companyMessages.noPollRating }}
-          </div>
-        </div>
-        <div class="labelOnTop">
-          <label>{{companyLabels.poor}}</label>
-          <input type="number" min="0" [ngModel]="company?.pollRating.poorPercentage" name="poorPercentage" #poorPercentage="ngModel" placeholder="{{companyLabels.poor}}"
-            required>
-          <div [hidden]="poorPercentage.valid || poorPercentage.pristine" class="alert alert-danger">
-            {{ companyMessages.noPollRating }}
-          </div>
-        </div>
-        <div class="labelOnTop">
-          <label>{{companyLabels.total}}</label>
-          <input type="number" min="0" [ngModel]="company?.pollRating.totalVotes" name="totalVotes" #totalVotes="ngModel" placeholder="{{companyLabels.total}}"
-            required>
-          <div [hidden]="totalVotes.valid || totalVotes.pristine" class="alert alert-danger">
-            {{ companyMessages.noPollRating }}
-          </div>
-        </div>
+      </div>
+      <div class="flex1 right stars">
+        <app-star-rating [starClass]="company?.pollRating.starClass"></app-star-rating>
       </div>
     </div>
     <div class="companyMessage">
