--- a/src/app/cc-toggle/cc-toggle.component.html
+++ b/src/app/cc-toggle/cc-toggle.component.html
@@ -1,4 +1,4 @@
-<div class="productToggle" (click)="setToggle()">
+<div class="ccToggle" (click)="setToggle()">
     <label>{{label}}</label>
   <i class="far" [ngClass]="{ 'fa-check-circle': displayToggle.isOn, 'fa-circle': !displayToggle.isOn }"></i>
 </div>
