--- a/src/app/cc-modal/cc-modal.component.css
+++ b/src/app/cc-modal/cc-modal.component.css
@@ -1,4 +1,4 @@
-.productModal {
+.ccModal {
   width: 310px;
   height: 200px;
   top: -300px;
@@ -10,18 +10,18 @@
   overflow: hidden;
 }
 
-.productModal.slideDown {
+.ccModal.slideDown {
   /* transition: top 300ms; */
   transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
   top: 30px;
 }
 
-.productModalHeader {
+.ccModalHeader {
   background: red;
   color: white;
 }
 
-.productModalFooter {
+.ccModalFooter {
   background: grey;
   color: white;
   position: absolute;
@@ -30,40 +30,40 @@
   text-align: right;
 }
 
-.productModalContent, .productModalHeader, .productModalFooter {
+.ccModalContent, .ccModalHeader, .ccModalFooter {
   padding: 6px 12px;
 }
 
-.productModalContent {
+.ccModalContent {
   padding-top: 12px;
 }
 
-.productModalContent, .productModalHeader {
+.ccModalContent, .ccModalHeader {
   text-align: left;
 }
 
-.productModal button {
+.ccModal button {
   margin-left: 12px;
 }
 
-.productModal span {
+.ccModal span {
   display: inline-block;
   width: 50%;
 }
 
-.productModal .fa-exclamation-triangle {
+.ccModal .fa-exclamation-triangle {
   color: white;
   font-size: 36px;
 }
 
-.productModal .title {
+.ccModal .title {
   font-size: 14px;
   position: relative;
   top: -8px;
 }
 
 @media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
-  .productModal {
+  .ccModal {
     width: 500px;
     height: 300px;
   }
