--- a/src/app/cc-modal/cc-modal.component.html
+++ b/src/app/cc-modal/cc-modal.component.html
@@ -1,20 +1,20 @@
 <div id="overlay" (click)="cancel()"></div>
-<div class="productModal" [ngClass]="{ 'slideDown': modalOpen }">
+<div class="ccModal" [ngClass]="{ 'slideDown': modalOpen }">
   <div class="{{type}}">
-    <div class="productModalHeader">
+    <div class="ccModalHeader">
       <span class="title">{{title}}</span>
       <span class="right">
         <i class="fas fa-exclamation-triangle" *ngIf="type === keys.danger"></i>
         <i class="far fa-smile" *ngIf="type === keys.ok"></i>
       </span>
     </div>
-    <div class="productModalContent">
+    <div class="ccModalContent">
       {{message}}
     </div>
-    <div class="productModalFooter right">
+    <div class="ccModalFooter right">
+        <button type="button" class="cancel right capitalize" (click)="cancel()">{{keys.cancel}}</button>
       <button type="button" class="delete right capitalize" *ngIf="type === keys.danger" (click)="ok()">{{keys.delete}}</button>
       <button type="button" class="ok right upperCase" *ngIf="type === keys.ok" (click)="ok()">{{keys.ok}}</button>
-      <button type="button" class="cancel right capitalize" (click)="cancel()">{{keys.cancel}}</button>
     </div>
   </div>
 </div>
