--- a/src/app/products/product-single-select/cc-single-select.component.css
+++ b/src/app/products/product-single-select/cc-single-select.component.css
@@ -1,10 +1,20 @@
-.productSelect {
+.singleSelect {
   text-align: left;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: #999;
+  position: relative;
 }
 
-.productSelect button {
+.singleSelect .singleSelectList {
+  position: absolute;
+  top: 38px;
+  left: 0;
+  z-index: 4;
+  width: 100%;
+  background: white;
+}
+
+.singleSelect button {
   background: none;
   padding: 12px 10px;
   border: 1px solid #ccc;
@@ -16,40 +26,30 @@
   position: relative;
 }
 
-.productSelect .fa-chevron-down, .productSelect .fa-chevron-up {
+.singleSelect .fa-chevron-down, .singleSelect .fa-chevron-up {
   color: #ccc;
   font-size: 12px;
   text-align: right;
 }
 
-.productSelect span {
+.singleSelect span {
   display: inline-block;
 }
 
-.productSelect .icon,
-.productSelect .iconToggle {
-  width: 30px;
+.singleSelect .icon,
+.singleSelect .iconToggle {
+  width: 38px;
   text-align: right;
   position: absolute;
   right: 8px;
   top: 8px;
 }
 
-.productSelect .iconToggle {
+.singleSelect .iconToggle {
   top: 10px;
 }
 
-.productSelect .fa-plus-circle {
-  color: lightgreen;
-  font-size: 22px;
-}
-
-.productSelect .fa-trash-alt {
-  color: #F9C9C8;
-  font-size: 18px;
-}
-
-.productSelect .listItem {
+.singleSelect .listItem {
   padding: 10px;
   border: 1px solid #ccc;
   color: #999;
@@ -58,18 +58,14 @@
   position: relative;
 }
 
-.productSelect .listItem:first-child {
-  border-top: none;
-}
-
-.productSelect .listItem:last-child {
+.singleSelect .listItem:last-child {
   border-bottom: 1px solid #ccc;
 }
 
-.productSelect .listItem:hover, .productSelect button:hover {
+.singleSelect .listItem:hover, .singleSelect button:hover {
   background: aliceblue;
 }
 
-.productSelect.selected .listItem:first-child {
+.singleSelect.selected .listItem:first-child {
   border-top: 1px solid #ccc;
 }
