--- a/src/app/companies/company-create/company-create.component.html
+++ b/src/app/companies/company-create/company-create.component.html
@@ -1,5 +1,5 @@
 <div id="overlay" *ngIf="isLoading"></div>
-<app-company-loading [isLoading]="isLoading"></app-company-loading>
+<app-cc-loading [isLoading]="isLoading"></app-cc-loading>
 <section class="card">
   <form #companyForm="ngForm">
     <div class="companyData">
