--- a/src/app/companies/company-list/company-list.component.html
+++ b/src/app/companies/company-list/company-list.component.html
@@ -1,5 +1,5 @@
 <div id="overlay" *ngIf="isLoading"></div>
-<app-company-loading [isLoading]="isLoading"></app-company-loading>
+<app-cc-loading [isLoading]="isLoading"></app-cc-loading>
 <div class="companyListContainer" *ngIf="!showDelete">
   <div class="container">
     <div class="flex1">
