--- a/src/app/products/product-create/product-create.component.html
+++ b/src/app/products/product-create/product-create.component.html
@@ -1,5 +1,5 @@
 <div id="overlay" *ngIf="isLoading"></div>
-<app-loading [isLoading]="isLoading"></app-loading>
+<app-cc-loading [isLoading]="isLoading"></app-cc-loading>
 <section class="card" *ngIf="!isLoading">
   <form #productForm="ngForm">
     <div class="productData">
