--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,15 @@
 <header>
-  <nav class="container">
-    <div class="flex1">
-      <a class="navItem" routerLink="/companies" routerLinkActive="active" *ngIf="isLoggedIn">Companies</a>
-      <a class="navItem" routerLink="/products" routerLinkActive="active" *ngIf="isLoggedIn">Products</a>
-      <a class="navItem" routerLink="/users" routerLinkActive="active" *ngIf="isLoggedIn">Users</a>
+  <i class="fas fa-bars" id="navBut" (click)="toggleMenu($event)"></i>
+  <nav class="container" [@slideDown]="slideDownState">
+    <div *ngFor="let route of appRoutes; index as i" class="navItemContainer">
+      <a *ngIf="i === 0 && isLoggedIn" class="navItem home" routerLink="/" (click)="goto('/')" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><i class="fas fa-home"></i></a>
+      <a *ngIf="(i > 0) && (i < appRoutes.length - 1) && isLoggedIn" [routerLink]="route.path" class="navItem" [ngClass]="{ 'second': i === 1}"
+        (click)="goto(route.path)" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">{{ route.data.name }}</a>
     </div>
     <div class="flex1 right">
-      <a class="navItem" routerLink="/users/login" routerLinkActive="active" *ngIf="!isLoggedIn">Login</a>
-      <a class="navItem" routerLink="/users/signup" routerLinkActive="active" *ngIf="!isLoggedIn">Signup</a>
-      <a class="navItem" *ngIf="isLoggedIn" (click)="onLogout()" routerLinkActive="active">Logout</a>
+      <a class="navItem icon" routerLink="/users/login" routerLinkActive="active" *ngIf="!isLoggedIn" title="Login"><i class="fas fa-sign-in-alt"></i></a>
+      <a class="navItem icon" routerLink="/users/signup" routerLinkActive="active" *ngIf="!isLoggedIn" title="Register"><i class="fas fa-user-plus"></i></a>
+      <a class="navItem icon" *ngIf="isLoggedIn" (click)="onLogout()" routerLinkActive="active" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
     </div>
   </nav>
 </header>
