--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -3,6 +3,13 @@
   margin: 0 auto;
   text-align: center;
   margin-top: 15px;
+  position: relative;
+}
+
+.login .alert-danger {
+  position: absolute;
+  left: 0;
+  bottom: -70px;
 }
 
 @media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
