added image filters

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,4 +1,2 @@
-<div class="pagesContainer">
-  <app-pages-header class="leftMenu"></app-pages-header>
-  <router-outlet class="content"></router-outlet>
-</div>
+<app-pages-header></app-pages-header>
+<router-outlet></router-outlet>
