--- a/src/app/pages/results/results.component.html
+++ b/src/app/pages/results/results.component.html
@@ -2,31 +2,41 @@
 <app-cc-loading [isLoading]="isLoading"></app-cc-loading>
 <section class="page">
   <form #resultsForm="ngForm">
-      <h4>Results Messages</h4>
-      <div class="labelOnTop">
-        <label>{{resultsLabels.hurray}}</label>
-        <input type="text" autofocus [ngModel]="results?.hurray" name="hurray" #hurray="ngModel"
-          required>
-        <div [hidden]="hurray.valid || hurray.pristine" class="alert alert-danger">
-          {{ resultsLabels.noHurray }}
-        </div>
+    <div class="container imageFilter">
+      <app-cc-image-filter [type]="keys.currentCompany" [imageFilter]="currentCompany"></app-cc-image-filter>
+      <app-cc-image-filter [type]="keys.bigCompany" [imageFilter]="bigCompany"></app-cc-image-filter>
+      <app-cc-image-filter [type]="keys.none" [imageFilter]="none"></app-cc-image-filter>
+    </div>
+    <h4>Results Messages</h4>
+    <div class="labelOnTop">
+      <label>{{resultsLabels.heading}}</label>
+      <input type="text" autofocus [ngModel]="results?.heading" name="heading" #heading="ngModel" required>
+      <div [hidden]="heading.valid || heading.pristine" class="alert alert-danger">
+        {{ resultsLabels.noHeading }}
       </div>
-      <div class="labelOnTop">
-        <label>{{resultsLabels.youCanSave}}</label>
-        <input type="text" [ngModel]="results?.youCanSave" name="youCanSave" #youCanSave="ngModel"
-           required>
-        <div [hidden]="youCanSave.valid || youCanSave.pristine" class="alert alert-danger">
-          {{ resultsLabels.noYouCanSave }}
-        </div>
+    </div>
+    <div class="labelOnTop">
+      <label>{{resultsLabels.subHeading}}</label>
+      <input type="text" [ngModel]="results?.subHeading" name="subHeading" #subHeading="ngModel" required>
+      <div [hidden]="subHeading.valid || subHeading.pristine" class="alert alert-danger">
+        {{ resultsLabels.noSubHeading }}
       </div>
-      <div class="labelOnTop">
-        <label>{{resultsLabels.sorted}}</label>
-        <input type="text" [ngModel]="results?.sorted" name="sorted" #sorted="ngModel"
-          required>
-        <div [hidden]="sorted.valid || sorted.pristine" class="alert alert-danger">
-          {{ resultsLabels.noSorted }}
-        </div>
+    </div>
+    <div class="labelOnTop">
+      <label>{{resultsLabels.personalProjectionMessage}}</label>
+      <input type="text" [ngModel]="results?.personalProjectionMessage" name="personalProjectionMessage" #personalProjectionMessage="ngModel"
+        required>
+      <div [hidden]="personalProjectionMessage.valid || personalProjectionMessage.pristine" class="alert alert-danger">
+        {{ resultsLabels.noPersonalProjectionMessage }}
       </div>
+    </div>
+    <div class="labelOnTop">
+      <label>{{resultsLabels.fullRangeMessage}}</label>
+      <input type="text" [ngModel]="results?.fullRangeMessage" name="fullRangeMessage" #fullRangeMessage="ngModel" required>
+      <div [hidden]="fullRangeMessage.valid || fullRangeMessage.pristine" class="alert alert-danger">
+        {{ resultsLabels.noFullRangeMessage }}
+      </div>
+    </div>
     <div class="resultsButtons right">
       <button type="button" class="cancel right capitalize" (click)="onCancel(resultsForm)">Cancel</button>
       <button type="button" class="ok" (click)="onSaveResults(resultsForm)">Save</button>
