--- a/src/app/pages/pages-header/pages-header.component.scss
+++ b/src/app/pages/pages-header/pages-header.component.scss
@@ -1,115 +1,37 @@
 .pagesHeader {
-    max-width: 990px;
-    margin: 0 auto;
-    padding-bottom: 10px;
-    overflow: hidden;
-    width: 100%;
-    float: none;
-    position: relative;
-    background: white;
-    min-height: 0px;
     display: none;
-    #pagesMenu {
-        display: block;
-        position: fixed;
-        top: 8px;
-        left: 10px;
-        z-index: 20;
-        font-size: 28px;
-        color: red;
-    }
-    nav {
-        padding: 0;
-        text-align: center;
-        width: 100%;
-        height: 500px;
-        margin: 0;
-        margin-top: 0px;
-        position: fixed;
-        left: 0;
-        top: -500px;
-        z-index: 3;
-        background: white;
-    }
-    .navItemContainer {
-        display: table;
-    }
-    .navItem,
-    .navItem:visited {
-        padding: 14px 10px;
-        color: darkgray;
-        font-size: 14px;
-        text-decoration: none;
-        cursor: pointer;
-        border-bottom: 1px solid lightgrey;
-        height: 50px;
-        display: table-cell;
-        text-align: center;
-        width: 100%;
-        text-transform: uppercase;
-    }
-    .navItem:hover,
-    .navItem.active {
-        color: darkslategrey;
-    }
-    .fas {
-        font-size: 26px;
-    }
-    .navItem.home,
-    .navItem.icon {
-        margin-top: -5px;
-        z-index: 20;
-    }
-
-    .navItem.home:hover,
-    .navItem.home.active,
-    .navItem.icon:hover,
-    .navItem.icon.active {
-        border-bottom: none;
-    }
 }
 
 @media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
     .pagesHeader {
-      background: aliceblue;
-      min-height: 400px;
-      display: block;
-        .container {
-            display: flex;
-            flex-direction: column;
-        }
-        .navItemContainer {
-            display: block;
-        }
-        #pagesMenu {
-            display: none;
-        }
+        padding-bottom: 10px;
+        display: block;
         nav {
             text-align: left;
             height: auto;
-            margin-top: 0px;
+            margin-top: 20px;
             position: relative;
             left: 0;
             top: 0;
             background: none;
         }
-        .navItem,
-        .navItem:visited {
-            display: block;
+        .navItem {
+            display: inline-block;
             padding: 6px 0 0 0;
             border-bottom: none;
             height: auto;
             text-align: left;
             width: auto;
             margin: 0 10px;
+            text-decoration: none;
             text-transform: capitalize;
+            color: darkgray;
+            cursor: pointer;
         }
-        .navItem.active,
-        .navItem:hover {
-            border-bottom: none
-        }
-        .navItem.home {
-            display: none;
+        .navItem:hover,
+        .navItem.active {
+            color: darkslategrey;
+            border-bottom: 2px solid darkslategray;
         }
     }
 }
