--- a/src/app/pages/pages-header/pages-header.component.html
+++ b/src/app/pages/pages-header/pages-header.component.html
@@ -1,4 +1,4 @@
-<div class="pagesHeader">
+<div class="nine90 pagesHeader">
   <nav class="container">
     <div *ngFor="let route of pagesRoutes; index as i" class="navItemContainer">
       <a *ngIf="isLoggedIn && route.path !== ''" [routerLink]="route.path" class="navItem"
