--- a/src/app/pages/thankyou/thankyou.component.html
+++ b/src/app/pages/thankyou/thankyou.component.html
@@ -1,3 +1,7 @@
 <div class="page">
-    thanks works!
+  <div class="bgContrast">
+    <div class="nine90">
+      <h2>Thankyou</h2>
+    </div>
   </div>
+</div>
