--- a/src/app/cc-image-filter/cc-image-filter.component.scss
+++ b/src/app/cc-image-filter/cc-image-filter.component.scss
@@ -10,21 +10,29 @@
         color: white;
         padding: 4px 10px;
     }
+    .header.selected {
+      background: #00AEEF;
+      .icon {
+        color: white;
+      }
+    }
     .content {
         padding: 6px 12px;
         position: relative;
     }
     .icon {
         position: absolute;
-        right: 10px;
+        left: 10px;
         font-size: 26px;
         top: 12px;
+        cursor: pointer;
     }
     .heading {
         font-size: 14px;
         position: relative;
-        width: 88%;
+        width: 87%;
         display: inline-block;
+        margin-left: 35px;
     }
     .message {
         position: relative;
