--- a/src/app/pages/pages-header/pages-header.component.scss
+++ b/src/app/pages/pages-header/pages-header.component.scss
@@ -9,7 +9,7 @@
         nav {
             text-align: left;
             height: auto;
-            margin-top: 20px;
+            margin: 10px 0;
             position: relative;
             left: 0;
             top: 0;
