--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -1,8 +1,10 @@
 .page {
     padding: 15px 10px;
     width: 100%;
+    text-align: center;
     .imageFilter {
-        margin-left: 10px;
+        display: flex;
+        flex-direction: column;
     }
     h1,
     h4 {
@@ -17,7 +19,7 @@
     .page {
         padding: 0 10px;
         .imageFilter {
-            margin-left: 15px;
+            flex-direction: row;
         }
     }
 }
