--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,8 +12,24 @@ body {
 }
 
 header, main {
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+}
+
+.pad10 {
+  padding: 10px;
+}
+
+.bgContrast {
+  background: aliceblue;
+  padding: 10px 0;
+}
+
+.nine90 {
   max-width: 990px;
   margin: 0 auto;
+  text-align: left;
 }
 
 header {
@@ -50,11 +66,6 @@ router-outlet {
   left: 0;
   top: 0;
   z-index: 2;
-}
-
-.mainContainer {
-  max-width: 1000px;
-  margin: 0 auto;
 }
 
 .main {
@@ -286,9 +297,6 @@ label {
 }
 
 @media only screen and (min-device-width: 768px) and (-webkit-min-device-pixel-ratio: 1) {
-  .main {
-    flex: 3;
-  }
 
   .container {
     display: flex;
