--- a/src/app/companies/company-list/company-list.component.scss
+++ b/src/app/companies/company-list/company-list.component.scss
@@ -28,6 +28,15 @@
 
 .companyListContainer {
   position: relative;
+
+  .container {
+    text-align: left;
+    padding: 0;
+  }
+
+  .flex1 {
+    padding: 10px;
+  }
 }
 
 .companyListContainer .add {
