--- a/src/app/customers/customer-create/customer-create.component.html
+++ b/src/app/customers/customer-create/customer-create.component.html
@@ -2,21 +2,33 @@
 <app-cc-loading [isLoading]="isLoading"></app-cc-loading>
 <section class="card" *ngIf="!isLoading">
   <form #customerForm="ngForm">
-    <div class="customerData">
-      <h4>Product</h4>
-      <div class="container">
-        <div class="flex1">
-          <div class="labelOnTop">
-            <label>{{customerMessages.firstName}}</label>
-            <input type="text" autofocus [ngModel]="customer?.firstName" name="firstName" #firstName="ngModel" placeholder="{{customerMessages.firstName}}" required>
-            <div [hidden]="firstName.valid || firstName.pristine" class="alert alert-danger">
-              {{ customerMessages.noFirstName }}
-            </div>
+    <h4>{{customerMessages.customer}}</h4>
+    <div class="container">
+      <div class="flex1">
+        <div class="labelOnTop">
+          <label>{{customerMessages.firstName}}</label>
+          <input type="text" autofocus [ngModel]="customer?.firstName" name="firstName" #firstName="ngModel" placeholder="{{customerMessages.firstName}}"
+            required>
+          <div [hidden]="firstName.valid || firstName.pristine" class="alert alert-danger">
+            {{ customerMessages.noFirstName }}
           </div>
         </div>
-        <div class="flex1">
-          <app-cc-single-select (singleSelectedItems)="setSingleSelectedItems($event)" [label]="customerMessages.product" [selectedLabel]="selectedProductLabel" [items]="products"></app-cc-single-select>
+      </div>
+      <div class="flex1">
+        <div class="labelOnTop">
+          <label>{{customerMessages.lastName}}</label>
+          <input type="text" autofocus [ngModel]="customer?.lastName" name="lastName" #lastName="ngModel" placeholder="{{customerMessages.lastName}}"
+            required>
+          <div [hidden]="lastName.valid || lastName.pristine" class="alert alert-danger">
+            {{ customerMessages.noFirstName }}
+          </div>
         </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="flex1">
+        <app-cc-single-select (singleSelectedItems)="setSingleSelectedItems($event)" [label]="customerMessages.product" [selectedLabel]="selectedProductLabel"
+          [items]="products"></app-cc-single-select>
       </div>
     </div>
     <div class="customerButtons right">
