--- a/src/app/products/product-list/product-list.component.scss
+++ b/src/app/products/product-list/product-list.component.scss
@@ -28,6 +28,15 @@
 
 .productListContainer {
   position: relative;
+
+  .container {
+    text-align: left;
+    padding: 0;
+  }
+
+  .flex1 {
+    padding: 10px;
+  }
 }
 
 .productListContainer .add {
